# AutoSim

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: sparsedrive_v2.yaml
docs/: architecture.md  executive_brief.md  install_plan.md  milestone_1_plan.md  milestone_1_report.md  week1_plan.md
others/: netconfig.txt  research_journey.md  week1_plan.md
others/video/autosim-architect-brief/: meta.md
others/video/autosim-research-journey/: meta.md
src/autosim/: __init__.py
src/autosim/core/: __init__.py
src/autosim/data_adapters/: __init__.py
src/autosim/e2e_plugins/: __init__.py  protocol.py
src/autosim/eval/: __init__.py
src/autosim/kinematics/: __init__.py
src/autosim/renderer/: __init__.py
src/autosim/renderer/carla_ue4/: __init__.py
src/autosim/scenarios/: __init__.py
tests/: test_smoke.py
video/autosim-architect-brief/: script.md
video/autosim-research-journey/: script.md
